exp4/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec
   27         | error COMMA
   28         | error RP

   29 CompSt: LC DefList StmtList RC
   30       | LC error RC

   31 StmtList: Stmt StmtList
   32         | %empty

   33 Stmt: Exp SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | IF LP Exp RP error ELSE Stmt
   39     | WHILE LP Exp RP Stmt

   40 DefList: Def DefList
   41        | %empty

   42 Def: Specifier DecList SEMI
   43    | STAR DIV
   44    | error SEMI

   45 DecList: Dec
   46        | Dec COMMA DecList

   47 Dec: VarDec
   48    | VarDec ASSIGNOP Exp

   49 Exp: Exp ASSIGNOP Exp
   50    | Exp AND Exp
   51    | Exp OR Exp
   52    | Exp RELOP Exp
   53    | Exp PLUS Exp
   54    | Exp MINUS Exp
   55    | Exp STAR Exp
   56    | Exp DIV Exp
   57    | LP Exp RP
   58    | LP error RP
   59    | MINUS Exp
   60    | NOT Exp
   61    | ID LP Args RP
   62    | ID LP error RP
   63    | ID LP RP
   64    | Exp LB Exp RB
   65    | Exp LB error RB
   66    | Exp DOT ID
   67    | ID
   68    | INT
   69    | FLOAT

   70 Args: Exp COMMA Args
   71     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 20 23 27 28 30 38 44 58 62 65
INT (258) 19 68
FLOAT (259) 69
ID (260) 15 17 18 21 22 61 62 63 66 67
PLUS (261) 53
MINUS (262) 54 59
STAR (263) 43 55
DIV (264) 43 56
DOT (265) 66
SEMI (266) 4 5 7 8 33 35 42 44
COMMA (267) 10 24 27 46 70
ASSIGNOP (268) 48 49
RELOP (269) 52
AND (270) 50
OR (271) 51
NOT (272) 60
LP (273) 21 22 36 37 38 39 57 58 61 62 63
RP (274) 21 22 23 28 36 37 38 39 57 58 61 62 63
LB (275) 19 20 64 65
RB (276) 19 20 64 65
LC (277) 13 29 30
RC (278) 13 29 30
IF (279) 36 37 38
ELSE (280) 37 38
WHILE (281) 39
STRUCT (282) 13 14
RETURN (283) 35
TYPE (284) 11
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (35)
    on left: 9 10, on right: 4 10
Specifier (36)
    on left: 11 12, on right: 4 5 6 7 26 42
StructSpecifier (37)
    on left: 13 14, on right: 12
OptTag (38)
    on left: 15 16, on right: 13
Tag (39)
    on left: 17, on right: 14
VarDec (40)
    on left: 18 19 20, on right: 9 10 19 20 26 47 48
FunDec (41)
    on left: 21 22 23, on right: 6 7
VarList (42)
    on left: 24 25, on right: 21 24
ParamDec (43)
    on left: 26 27 28, on right: 24 25
CompSt (44)
    on left: 29 30, on right: 6 34
StmtList (45)
    on left: 31 32, on right: 29 31
Stmt (46)
    on left: 33 34 35 36 37 38 39, on right: 31 36 37 38 39
DefList (47)
    on left: 40 41, on right: 13 29 40
Def (48)
    on left: 42 43 44, on right: 40
DecList (49)
    on left: 45 46, on right: 42 46
Dec (50)
    on left: 47 48, on right: 45 46
Exp (51)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 69, on right: 33 35 36 37 38 39 48 49 50 51 52 53 54 55 56
    57 59 60 64 65 66 70 71
Args (52)
    on left: 70 71, on right: 61 70


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 3

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   23 FunDec: error . RP

    RP  shift, and go to state 22


State 16

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 18 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 9 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 27
    LC    shift, and go to state 28

    CompSt  go to state 29


State 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 30
    STAR    shift, and go to state 31
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    RC  reduce using rule 41 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 33
    Def              go to state 34


State 22

   23 FunDec: error RP .

    $default  reduce using rule 23 (FunDec)


State 23

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    error   shift, and go to state 35
    RP      shift, and go to state 36
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 38
    ParamDec         go to state 39


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 40

    ExtDecList  go to state 41
    VarDec      go to state 19


State 26

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . error RB

    error  shift, and go to state 42
    INT    shift, and go to state 43


State 27

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 28

   29 CompSt: LC . DefList StmtList RC
   30       | LC . error RC

    error   shift, and go to state 44
    STAR    shift, and go to state 31
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    INT     reduce using rule 41 (DefList)
    FLOAT   reduce using rule 41 (DefList)
    ID      reduce using rule 41 (DefList)
    MINUS   reduce using rule 41 (DefList)
    NOT     reduce using rule 41 (DefList)
    LP      reduce using rule 41 (DefList)
    LC      reduce using rule 41 (DefList)
    RC      reduce using rule 41 (DefList)
    IF      reduce using rule 41 (DefList)
    WHILE   reduce using rule 41 (DefList)
    RETURN  reduce using rule 41 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 45
    Def              go to state 34


State 29

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 30

   44 Def: error . SEMI

    SEMI  shift, and go to state 46


State 31

   43 Def: STAR . DIV

    DIV  shift, and go to state 47


State 32

   42 Def: Specifier . DecList SEMI

    ID  shift, and go to state 40

    VarDec   go to state 48
    DecList  go to state 49
    Dec      go to state 50


State 33

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 51


State 34

   40 DefList: Def . DefList

    error   shift, and go to state 30
    STAR    shift, and go to state 31
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    INT     reduce using rule 41 (DefList)
    FLOAT   reduce using rule 41 (DefList)
    ID      reduce using rule 41 (DefList)
    MINUS   reduce using rule 41 (DefList)
    NOT     reduce using rule 41 (DefList)
    LP      reduce using rule 41 (DefList)
    LC      reduce using rule 41 (DefList)
    RC      reduce using rule 41 (DefList)
    IF      reduce using rule 41 (DefList)
    WHILE   reduce using rule 41 (DefList)
    RETURN  reduce using rule 41 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 52
    Def              go to state 34


State 35

   27 ParamDec: error . COMMA
   28         | error . RP

    COMMA  shift, and go to state 53
    RP     shift, and go to state 54


State 36

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 37

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 40

    VarDec  go to state 55


State 38

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 56


State 39

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 57

    $default  reduce using rule 25 (VarList)


State 40

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 41

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 42

   20 VarDec: VarDec LB error . RB

    RB  shift, and go to state 58


State 43

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 59


State 44

   30 CompSt: LC error . RC
   44 Def: error . SEMI

    SEMI  shift, and go to state 46
    RC    shift, and go to state 60


State 45

   29 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    ID      shift, and go to state 63
    MINUS   shift, and go to state 64
    NOT     shift, and go to state 65
    LP      shift, and go to state 66
    LC      shift, and go to state 28
    IF      shift, and go to state 67
    WHILE   shift, and go to state 68
    RETURN  shift, and go to state 69

    $default  reduce using rule 32 (StmtList)

    CompSt    go to state 70
    StmtList  go to state 71
    Stmt      go to state 72
    Exp       go to state 73


State 46

   44 Def: error SEMI .

    $default  reduce using rule 44 (Def)


State 47

   43 Def: STAR DIV .

    $default  reduce using rule 43 (Def)


State 48

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   47 Dec: VarDec .
   48    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 74
    LB        shift, and go to state 26

    $default  reduce using rule 47 (Dec)


State 49

   42 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 75


State 50

   45 DecList: Dec .
   46        | Dec . COMMA DecList

    COMMA  shift, and go to state 76

    $default  reduce using rule 45 (DecList)


State 51

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 52

   40 DefList: Def DefList .

    $default  reduce using rule 40 (DefList)


State 53

   27 ParamDec: error COMMA .

    $default  reduce using rule 27 (ParamDec)


State 54

   28 ParamDec: error RP .

    $default  reduce using rule 28 (ParamDec)


State 55

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 26 (ParamDec)


State 56

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 57

   24 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 35
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 77
    ParamDec         go to state 39


State 58

   20 VarDec: VarDec LB error RB .

    $default  reduce using rule 20 (VarDec)


State 59

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 60

   30 CompSt: LC error RC .

    $default  reduce using rule 30 (CompSt)


State 61

   68 Exp: INT .

    $default  reduce using rule 68 (Exp)


State 62

   69 Exp: FLOAT .

    $default  reduce using rule 69 (Exp)


State 63

   61 Exp: ID . LP Args RP
   62    | ID . LP error RP
   63    | ID . LP RP
   67    | ID .

    LP  shift, and go to state 78

    $default  reduce using rule 67 (Exp)


State 64

   59 Exp: MINUS . Exp

    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 79


State 65

   60 Exp: NOT . Exp

    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 80


State 66

   57 Exp: LP . Exp RP
   58    | LP . error RP

    error  shift, and go to state 81
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 82


State 67

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . LP Exp RP Stmt ELSE Stmt
   38     | IF . LP Exp RP error ELSE Stmt

    LP  shift, and go to state 83


State 68

   39 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 84


State 69

   35 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 85


State 70

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


State 71

   29 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 86


State 72

   31 StmtList: Stmt . StmtList

    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    ID      shift, and go to state 63
    MINUS   shift, and go to state 64
    NOT     shift, and go to state 65
    LP      shift, and go to state 66
    LC      shift, and go to state 28
    IF      shift, and go to state 67
    WHILE   shift, and go to state 68
    RETURN  shift, and go to state 69

    $default  reduce using rule 32 (StmtList)

    CompSt    go to state 70
    StmtList  go to state 87
    Stmt      go to state 72
    Exp       go to state 73


State 73

   33 Stmt: Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . LB error RB
   66    | Exp . DOT ID

    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    DOT       shift, and go to state 92
    SEMI      shift, and go to state 93
    ASSIGNOP  shift, and go to state 94
    RELOP     shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    LB        shift, and go to state 98


State 74

   48 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 99


State 75

   42 Def: Specifier DecList SEMI .

    $default  reduce using rule 42 (Def)


State 76

   46 DecList: Dec COMMA . DecList

    ID  shift, and go to state 40

    VarDec   go to state 48
    DecList  go to state 100
    Dec      go to state 50


State 77

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 78

   61 Exp: ID LP . Args RP
   62    | ID LP . error RP
   63    | ID LP . RP

    error  shift, and go to state 101
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66
    RP     shift, and go to state 102

    Exp   go to state 103
    Args  go to state 104


State 79

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   59    | MINUS Exp .
   64    | Exp . LB Exp RB
   65    | Exp . LB error RB
   66    | Exp . DOT ID

    STAR  shift, and go to state 90
    DIV   shift, and go to state 91
    DOT   shift, and go to state 92
    LB    shift, and go to state 98

    $default  reduce using rule 59 (Exp)


State 80

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   60    | NOT Exp .
   64    | Exp . LB Exp RB
   65    | Exp . LB error RB
   66    | Exp . DOT ID

    DOT  shift, and go to state 92
    LB   shift, and go to state 98

    $default  reduce using rule 60 (Exp)


State 81

   58 Exp: LP error . RP

    RP  shift, and go to state 105


State 82

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   57    | LP Exp . RP
   64    | Exp . LB Exp RB
   65    | Exp . LB error RB
   66    | Exp . DOT ID

    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    DOT       shift, and go to state 92
    ASSIGNOP  shift, and go to state 94
    RELOP     shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    RP        shift, and go to state 106
    LB        shift, and go to state 98


State 83

   36 Stmt: IF LP . Exp RP Stmt
   37     | IF LP . Exp RP Stmt ELSE Stmt
   38     | IF LP . Exp RP error ELSE Stmt

    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 107


State 84

   39 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 108


State 85

   35 Stmt: RETURN Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . LB error RB
   66    | Exp . DOT ID

    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    DOT       shift, and go to state 92
    SEMI      shift, and go to state 109
    ASSIGNOP  shift, and go to state 94
    RELOP     shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    LB        shift, and go to state 98


State 86

   29 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 29 (CompSt)


State 87

   31 StmtList: Stmt StmtList .

    $default  reduce using rule 31 (StmtList)


State 88

   53 Exp: Exp PLUS . Exp

    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66
